[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/gui/menus/facility_screen/facility_screen.gd" type="Script" id=1]

[node name="FacilityScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 96
custom_constants/margin_left = 32
custom_constants/margin_bottom = 64

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_left = 32.0
margin_top = 96.0
margin_right = 992.0
margin_bottom = 536.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 953.0
margin_bottom = 433.0

[node name="ExitButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_left = 911.0
margin_right = 946.0
margin_bottom = 20.0
size_flags_horizontal = 10
text = "Exit"

[node name="RepairOption" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 946.0
margin_bottom = 155.0
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/RepairOption"]
margin_left = 359.0
margin_top = 58.0
margin_right = 491.0
margin_bottom = 72.0
text = "Health: Dummy Text"

[node name="Button" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/RepairOption"]
margin_left = 495.0
margin_top = 55.0
margin_right = 586.0
margin_bottom = 75.0
size_flags_vertical = 4
text = "Repair (cost)"

[node name="FuelOption" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 159.0
margin_right = 946.0
margin_bottom = 290.0
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/FuelOption"]
margin_left = 362.0
margin_top = 58.0
margin_right = 479.0
margin_bottom = 72.0
text = "Fuel: Dummy Text"

[node name="Button" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/FuelOption"]
margin_left = 483.0
margin_top = 55.0
margin_right = 584.0
margin_bottom = 75.0
size_flags_vertical = 4
text = "Deposit (cost)"

[node name="CollectOption" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 294.0
margin_right = 946.0
margin_bottom = 426.0
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/CollectOption"]
margin_left = 373.0
margin_top = 59.0
margin_right = 512.0
margin_bottom = 73.0
text = "Product: Dummy Text"

[node name="Button" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/CollectOption"]
margin_left = 516.0
margin_top = 56.0
margin_right = 572.0
margin_bottom = 76.0
size_flags_vertical = 4
text = "Collect"

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/RepairOption/Button" to="." method="_on_Repair_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/FuelOption/Button" to="." method="_on_Deposit_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/CollectOption/Button" to="." method="_on_Collect_pressed"]
